<resources>
    <string name="app_name">Bux || Kelompok 8</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="date">23 Jul 2019</string>
    <string name="time">10:29</string>
    <string name="book_id">00000000000</string>
    <string name="bus_name">Simpati Star</string>
    <string name="busNumber">A 888 BX</string>
    <string name="destination">Terminal Amplas Medan</string>
    <string name="book_no">Book No.</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="paid">Paid</string>
    <string name="how_was_your_trip">How was your trip?</string>
    <string name="you_ve_been_completed_tour_trip_with_the_detail">You\'ve been completed tour trip with the detail</string>
    <string name="po_name">Po Name</string>
    <string name="no_bus">No Bus</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="departune_date">Departune date</string>
    <string name="issued">Issued</string>
    <string name="please_give_your_rating">Please give your rating</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="name">Name</string>
    <string name="_4_5">4,5</string>
    <string name="phone_number">Phone Number</string>
    <string name="john_doe">John Doe</string>
    <string name="phone_number_value">08888892xxx</string>
    <string name="seat">Seat</string>
    <string name="_2">2</string>
    <string name="schedule">Schedule</string>
    <string name="medan">Medan</string>
    <string name="terminal_amplas">Terminal Amplas</string>
    <string name="estimate_time">Estimate time</string>
    <string name="seat_no">Seat No</string>
    <string name="_3_hour">3 Hour</string>
    <string name="_2_9">2,9</string>
    <string name="total">Total</string>
    <string name="total_payment">Rp 40.0000.000</string>
    <string name="departune">Departune</string>
    <string name="try_pekanbaru">Try Pekanbaru</string>
    <string name="arrival">Arrival</string>
    <string name="passanger">Passanger</string>
    <string name="_1_ppl">1 PPL</string>
    <string name="date_text">Date</string>
    <string name="select_date">Select date</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="select_how_much_passanger">Select how much passanger</string>
    <string name="older_than_2_years_old_should_buy_a_seat">Older than 2 years old should buy a seat</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_choice_seat">ChoiceSeatActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="choose_your_seat">Choose Your Seat</string>
    <string name="selected">Selected</string>
    <string name="reserved">Reserved</string>
    <string name="available">Available</string>
    <string name="book_now">Book now</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="nearby">Nearby</string>
    <string name="search_bus">Search Bus</string>
    <string name="select">Select</string>
    <string name="seat_2">Seat 2</string>
    <string name="sort_by_best_experience">Sort by Best Experience</string>
    <string name="sejahtera_21">Sejahtera 21</string>
    <string name="s_102">S 102</string>
    <string name="terminal_medan">Terminal Medan</string>
    <string name="_08_00">08:00</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="rp">Rp</string>
    <string name="_120000">120000</string>
    <string name="_seat">/seat</string>
    <string name="_58_review">58 Review</string>
    <string name="see_picture">See Picture</string>
    <string name="_30_seat_are_available">30 seat are available</string>
    <string name="available_seat">Available Seat</string>
    <string name="economybus">Economy</string>
    <string name="facility">Facility</string>
    <string name="_2_x_2_seat">2 x 2 seat</string>
    <string name="toilet">Toilet</string>
    <string name="lugagge">Lugagge</string>
    <string name="rest_stop">Rest stop</string>
    <string name="ac">AC</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="_0">0 </string>
    <string name="oops">Oops!</string>
    <string name="you_don_t_have_any_ticket_yet_please_order_first">You don\'t have any ticket yet. Please order first</string>
    <string name="title_activity_choose_payment">ChoosePaymentActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="payment">Payment</string>
    <string name="_total_payment">Total Payment</string>
    <string name="please_select_one_of_the_payment_method_below">Please select one of the payment method below</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="retail_payment">Retail Payment</string>
    <string name="visa">Visa Credit Card</string>
    <string name="master_card">Master Card</string>
    <string name="bni_mobile_banking">BNI Mobile Banking</string>
    <string name="cimb_niaga_mobile_banking">CIMB Niaga Mobile Banking</string>
    <string name="alfamart">Alfamart</string>
    <string name="card_number">Card Number</string>
    <string name="bintang">*** *** ***</string>
    <string name="valid_until">Valid Until</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="card_holder">Card holder</string>
    <string name="surename">Surename</string>
    <string name="last_three_digit_on_your_card">Last three digit on your card</string>
    <string name="vcc">VCC</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="_1_select_transfer">1. Select transfer</string>
    <string name="_2_in_sub_menu_select_virtual_account_transfer">2. In sub menu select virtual account transfer</string>
    <string name="_3_type_this_number_in_the_field">3. Type this number in the field</string>
    <string name="_230719_0001">230719-0001</string>
    <string name="after_you_press_continue_input_this_number_to_the_transfer_amount_field">4. After you press continue, input this number to the transfer amount field</string>
    <string name="_5_dont_forget_to_keep_reciept_for_verification_process">5. Dont forget to keep reciept for verification process</string>
    <string name="_1_ask_the_cashier_for_online_payment">1. Ask the cashier for Online Payment</string>
    <string name="_2_when_you_asked_what_payment_answer_bux">2. When you asked what Payment, answer Bux</string>
    <string name="_3_the_cashier_will_ask_what_is_your_booking_code_here_is_your_booking_code">3. The cashier will ask what is your booking code. Here is your booking code</string>
    <string name="_4_you_re_gonne_be_changed_as_much_as_the_total_payment_as_you_can_see_is_this_header">4. You\'re gonne be changed as much as the total payment. (as you can see is this header)</string>
    <string name="_5_keep_the_reciept_in_case_you_re_having_problem_with_payment_verification">5. Keep the reciept, in case you\'re having problem with payment verification</string>
    <string name="web_client_id">574738551533-0hajmpib1nntutcki3kns7qf3tkj6vkm.apps.googleusercontent.com</string>
    <string name="payment_successfull">Payment Successfull!</string>
    <string name="transaction_number">Transaction Number : </string>
    <string name="n_a">N/A</string>
    <string name="contohemail_gmail_com">contohEmail@gmail.com</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="travelling_adalah_bisnis_besar_yang_berkembang_di_semua_negara_bux_adalah_sistem_reservasi_bus_berkaitan_dengan_pemeliharaan_catatan_rincian_setiap_penumpang_termasuk_pemiliharaan_informasi_seperti_jadwal_dan_detail_setiap_bus">Travelling adalah bisnis besar yang berkembang di semua negara. Bux adalah sistem reservasi bus berkaitan dengan pemeliharaan catatan rincian setiap penumpang termasuk pemiliharaan informasi seperti jadwal dan detail setiap bus.</string>
    <string name="scan_here">Scan Here</string>
    <string name="ticket">Ticket</string>
    <string name="_3312">3312</string>
    <string name="unique_code">Unique Code</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="select_seat">Select Seat</string>
</resources>