<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_your_trip"
        style="@style/poppins20SemiBoldBlack"
        android:layout_marginBottom="20dp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_ve_been_completed_tour_trip_with_the_detail"
        style="@style/poppins16RegularGrey"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/po_name"
                style="@style/poppins16RegularGrey"/>

            <TextView
                android:id="@+id/busName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_name"
                style="@style/poppins16SemiBoldBlack"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_bus"
                style="@style/poppins16RegularGrey"/>

            <TextView
                android:id="@+id/busNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_name"
                style="@style/poppins16SemiBoldBlack"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departune_date"
                style="@style/poppins16RegularGrey"/>

            <TextView
                android:id="@+id/timeArrived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                style="@style/poppins16SemiBoldBlack"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_status"
                style="@style/poppins16RegularGrey"/>

            <include
                android:id="@+id/ticketStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                layout="@layout/success_issued"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_give_your_rating"
        style="@style/poppins16RegularGrey"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/rbTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/yellow"
        android:rating="2"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/rateClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_app"
        android:textAllCaps="true"
        style="@style/poppins20SemiBoldPrimary"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</LinearLayout>