<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.uknown.kelompok8_project_akhir_8.homepage.orderpage.payment.detailpayment.DetailBankFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/imagebank"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/image_bni"/>

                        <TextView
                            android:id="@+id/bankname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bni_mobile_banking"
                            style="@style/poppins14RegularBlackGrey"
                            android:layout_marginStart="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/backgroundDisplay"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_select_transfer"
                        style="@style/poppins14RegularBlackGrey"
                        android:layout_marginTop="30dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_in_sub_menu_select_virtual_account_transfer"
                        style="@style/poppins14RegularBlackGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_type_this_number_in_the_field"
                        style="@style/poppins14RegularBlackGrey"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_230719_0001"
                        style="@style/poppins16SemiBoldPrimary"
                        android:gravity="center"
                        android:layout_marginTop="30dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/after_you_press_continue_input_this_number_to_the_transfer_amount_field"
                        style="@style/poppins14RegularBlackGrey"
                        android:layout_marginTop="30dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:id="@+id/amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_120000"
                            style="@style/poppins16SemiBoldPrimary" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_dont_forget_to_keep_reciept_for_verification_process"
                        style="@style/poppins14RegularBlackGrey"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/verifpayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_payment"
                style="@style/poppins16SemiBoldWhite"
                android:background="@drawable/selector_btn"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>