<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:layout_marginVertical="5dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LLsatu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tvNamaBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sejahtera_21"
                style="@style/poppins16SemiBoldPrimary" />

            <TextView
                android:id="@+id/tvKodeBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/s_102"
                style="@style/poppins16RegularGrey"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tanggalkeberangkatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/poppins14SemiBoldGrey"
            android:layout_below="@+id/LLsatu"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:id="@+id/lldua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tanggalkeberangkatan"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="38dp"
                android:src="@drawable/icon_navigate" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.05"
                android:orientation="vertical"
                android:paddingStart="13dp"
                android:paddingEnd="30dp">

                <TextView
                    android:id="@+id/tvDarimana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminal_medan"
                    style="@style/poppins14RegularGrey"
                    android:maxLines="2"/>

                <TextView
                    android:id="@+id/tvJamDarimana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08_00"
                    style="@style/poppins14RegularGrey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.70"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/icon_star" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_4_5_5"
                    android:gravity="end"
                    android:textColor="#8C6F12"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/_58_review"
                    style="@style/poppins14RegularGrey" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lltiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lldua"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/icon_destination" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="13dp"
                android:paddingStart="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tvKemana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminal_amplas"
                    style="@style/poppins14RegularGrey"/>

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_below="@+id/lltiga"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lltiga"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/rp"
                        style="@style/poppins16SemiBoldPrimary"/>

                    <TextView
                        android:id="@+id/tvHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:text="@string/_120000"
                        style="@style/poppins16SemiBoldPrimary"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_seat"
                    style="@style/poppins14SemiBoldBlackGrey"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/book_now"
                style="@style/poppins14SemiBoldWhite"
                android:background="@drawable/background_button_primarycolor"
               />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>